--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
   <head>
 
     <link rel="stylesheet" type="text/css" href="optionsPage.css" />
-
+    <script src="pendo.js"></script>
   </head>
   <body>
 
@@ -18,13 +18,13 @@
     <div class="form-group">
       <input type="text" id="newURL" class="form-field" placeholder="example.com">
       <label class="form-label">What's the URL that you want to test Pendo on?</label>
-      <input type='button' value='Update' id='addURL' />
+      <input type='button' value='Update' id='addURL' class="btn btn-square btn-lg btn-filled-green"/>
     </div>
     
     <div class="form-group">
       <input type="text" id="newKey" class="form-field" placeholder="0000-0000-0000">
       <label class="form-label">What's your Pendo API key?</label>
-      <input type='button' value='Update' id='addKey' />
+      <input type='button' value='Update' id='addKey' class="btn btn-square btn-lg btn-filled-green"/>
     </div>
 
     
