--- a/options.html
+++ b/options.html
@@ -35,6 +35,15 @@
         </div>
       </div>
       <div class="switch-group">
+        <div class="switch_label">Enable/Disable Salesforce Lightning Mode</div>
+        <div class="switch-container">
+          <label class="switch">
+            <input type="checkbox" id="checkbox3">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </div>
+      <div class="switch-group">
         <div class="switch_label">Turn Pendo extension on/off</div>
         <div class="switch-container">
           <label class="switch">
