--- a/options.html
+++ b/options.html
@@ -25,6 +25,11 @@
         <label class="form-label">Enter your email (required)</label>
         <input type='button' value='Update' id='addVisitor' class="btn btn-square btn-lg"/>
       </div>
+      <div class="form-group">
+        <input type="text" id="account" class="form-field">
+        <label class="form-label">Enter your account (recommended)</label>
+        <input type='button' value='Update' id='addAccount' class="btn btn-square btn-lg"/>
+      </div>
       <div class="switch-group">
         <div class="switch_label">Disable CSP Headers (try this if the extension doesn't work)</div>
         <div class="switch-container">
