--- a/options.html
+++ b/options.html
@@ -22,12 +22,12 @@
       </div>
       <div class="form-group">
         <input type="text" id="visitor" class="form-field">
-        <label class="form-label">Enter your email (required)</label>
+        <label class="form-label">Enter your visitor ID (required)</label>
         <input type='button' value='Update' id='addVisitor' class="btn btn-square btn-lg"/>
       </div>
       <div class="form-group">
         <input type="text" id="account" class="form-field">
-        <label class="form-label">Enter your account (recommended)</label>
+        <label class="form-label">Enter your account ID (recommended)</label>
         <input type='button' value='Update' id='addAccount' class="btn btn-square btn-lg"/>
       </div>
       <div class="switch-group">
