--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
     <form>
       <div class="form-group">
         <input type="text" id="newURL" class="form-field">
-        <label class="form-label">What's your app's URL? (required)</label>
+        <label class="form-label">What's your app's URL(s)? (required) (use commas to separate multiple)</label>
         <input type='button' value='Update' id='addURL' class="btn btn-square btn-lg"/>
       </div>
       <div class="form-group">
