--- a/options.html
+++ b/options.html
@@ -13,23 +13,20 @@
       <div class="form-group">
         <input type="text" id="newURL" class="form-field">
         <label class="form-label">What's your app's URL(s)? (required) (use commas to separate multiple)</label>
-        <input type='button' value='Update' id='addURL' class="btn btn-square btn-lg"/>
       </div>
       <div class="form-group">
         <input type="text" id="newKey" class="form-field">
         <label class="form-label">What's your Pendo API key? (required)</label>
-        <input type='button' value='Update' id='addKey' class="btn btn-square btn-lg"/>
       </div>
       <div class="form-group">
         <input type="text" id="visitor" class="form-field">
         <label class="form-label">Enter your visitor ID (required)</label>
-        <input type='button' value='Update' id='addVisitor' class="btn btn-square btn-lg"/>
       </div>
       <div class="form-group">
         <input type="text" id="account" class="form-field">
         <label class="form-label">Enter your account ID (recommended)</label>
-        <input type='button' value='Update' id='addAccount' class="btn btn-square btn-lg"/>
       </div>
+      <input type='button' value='Update' id='updateMeta' class="btn btn-square btn-lg"/>
       <div class="switch-group">
         <div class="switch_label">Disable CSP Headers (try this if the extension doesn't work)</div>
         <div class="switch-container">
