--- a/options.html
+++ b/options.html
@@ -54,6 +54,15 @@
           </label>
         </div>
       </div>
+      <div class="switch-group">
+        <div class="switch_label">Enable/Disable Pendo Adopt Mode</div>
+        <div class="switch-container">
+          <label class="switch">
+            <input type="checkbox" id="checkbox4">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </div>      
     </form>
     <div id="app-launch-container"></div>
   </body>
