move on/off to bottom, update checkbox IDs to more clearly represent functionality

--- a/options.html
+++ b/options.html
@@ -31,7 +31,7 @@
         <div class="switch_label">Disable CSP Headers (try this if the extension doesn't work)</div>
         <div class="switch-container">
           <label class="switch">
-            <input type="checkbox" id="checkbox">
+            <input type="checkbox" id="checkbox_csp">
             <span class="slider"></span>
           </label>
         </div>
@@ -40,16 +40,7 @@
         <div class="switch_label">Enable/Disable Salesforce Lightning Mode</div>
         <div class="switch-container">
           <label class="switch">
-            <input type="checkbox" id="checkbox3">
-            <span class="slider"></span>
-          </label>
-        </div>
-      </div>
-      <div class="switch-group">
-        <div class="switch_label">Turn Pendo extension on/off</div>
-        <div class="switch-container">
-          <label class="switch">
-            <input type="checkbox" id="checkbox2">
+            <input type="checkbox" id="checkbox_lightning">
             <span class="slider"></span>
           </label>
         </div>
@@ -58,11 +49,20 @@
         <div class="switch_label">Enable/Disable Pendo Adopt Mode</div>
         <div class="switch-container">
           <label class="switch">
-            <input type="checkbox" id="checkbox4">
+            <input type="checkbox" id="checkbox_adopt">
             <span class="slider"></span>
           </label>
         </div>
-      </div>      
+      </div>
+      <div class="switch-group">
+        <div class="switch_label">Turn Pendo extension on/off</div>
+        <div class="switch-container">
+          <label class="switch">
+            <input type="checkbox" id="checkbox_onoff">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </div>
     </form>
     <div id="app-launch-container"></div>
   </body>
